--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,6 @@ pydantic-settings = "2.2.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
