--- a/.github/workflows/avro_to_pydantic.yml
+++ b/.github/workflows/avro_to_pydantic.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - '*'
-    # paths:
-    #   - '**/*.avsc'  # Run this workflow when .avsc files are changed
+    paths:
+      - '**/*.avsc'  # Run this workflow when .avsc files are changed
 
 jobs:
   generate-pydantic-models:
@@ -25,7 +25,17 @@ jobs:
         run: pip install pydantic-avro jq
       
       - name: Generate Pydantic models
-        run: make
+        run: |
+          for file in $(find avsc/log -name '*.avsc'); do
+            model_name=$(basename "$file" .avsc)
+            namespace_dir=$(jq -r '.namespace' "$file" | tr '.' '/')
+            mkdir -p "$namespace_dir"
+            pydantic-avro avro_to_pydantic --asvc "$file" --output "${namespace_dir}/${model_name}.py"
+          done
+      
+      - name: Generate Product models
+        run: |
+          sh convert.sh
       
       - name: Commit and Push Generated Models
         uses: stefanzweifel/git-auto-commit-action@v4
