--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,13 @@ repos:
     rev: v2.3.1
     hooks:
       - id: autoflake
-        args: [--in-place, --remove-all-unused-imports, --remove-duplicate-keys, --remove-unused-variables]
+        args:
+          [
+            --in-place,
+            --remove-all-unused-imports,
+            --remove-duplicate-keys,
+            --remove-unused-variables,
+          ]
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.10.1
     hooks:
@@ -17,3 +23,14 @@ repos:
     rev: v4.5.0
     hooks:
       - id: requirements-txt-fixer
+  - repo: local
+    hooks:
+      - id: check-user
+        name: Check User
+        entry: sh scripts/hooks/check_user.sh
+        language: system
+      - id: forbid-keywords
+        name: Forbid Keywords
+        entry: sh scripts/hooks/forbid_keywords.sh
+        language: system
+        types: [file]
