--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "favie-data-schema"
-version = "0.0.49"
+version = "0.0.50.alpha.0"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
