--- a/.github/workflows/avro_to_pydantic.yml
+++ b/.github/workflows/avro_to_pydantic.yml
@@ -20,9 +20,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      
+
       - name: Install pydantic-avro
-        run: pip install pydantic-avro jq
+        run: pip install pydantic-avro jq poetry
+      
+      - name: Install dependencies
+        run: |
+          poetry update
       
       - name: Generate Pydantic models
         run: |
