--- a/.github/workflows/avro_to_pydantic.yml
+++ b/.github/workflows/avro_to_pydantic.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry update
+          poetry install
       
       - name: Generate Pydantic models
         run: |
