--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "favie-data-schema"
-version = "0.0.51-alpha.5"
+version = "0.0.51-alpha.6"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-tldextract = "5.1.2"
+favie_common = {git = "git+https://github.com/SerendipityOneInc/favie_common.git", rev="0.1.5.alpha.0"}
 
 [build-system]
 requires = ["poetry-core"]
