--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-favie_common = {git = "git+https://github.com/SerendipityOneInc/favie_common.git", rev="0.1.5.alpha.0"}
+favie-common = {git = "git+https://github.com/SerendipityOneInc/favie-common.git", rev="0.1.5.alpha.0"}
 
 [build-system]
 requires = ["poetry-core"]
