--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "0.0.53-alpha.2"
+version = "0.0.53"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
