--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-favie-common = {git = "https://github.com/SerendipityOneInc/favie-common.git", rev="0.1.5-alpha.4"}
+favie-common = {git = "https://github.com/SerendipityOneInc/favie-common.git", rev="0.3.3"}
 
 [build-system]
 requires = ["poetry-core"]
