--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "0.0.53-alpha.7"
+version = "0.0.53-alpha.8"
 
 
 description = "Favie Data Schema"
@@ -12,7 +12,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-favie-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1-alpha.0"}
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1-alpha.0"}
 
 
 [build-system]
