--- a/.github/workflows/avro_to_pydantic.yml
+++ b/.github/workflows/avro_to_pydantic.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install pydantic-avro
-        run: pip install pydantic-avro jq poetry git+https://github.com/SerendipityOneInc/favie-data-common@0.0.1-alpha.2
+        run: pip install pydantic-avro jq poetry git+https://github.com/SerendipityOneInc/favie-data-common@0.0.1
       
       - name: Install dependencies
         run: |
