--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
 name = "favie-data-schema"
-version = "0.0.52"
+
+version = "0.0.53"
+
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
@@ -10,7 +12,9 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-tldextract = "5.1.2"
+lxml = "5.2.1"
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1"}
+
 
 [build-system]
 requires = ["poetry-core"]
