--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,25 @@
+[tool.black]
+line-length = 120
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 120
+
 [tool.poetry]
 name = "favie-data-schema"
 
@@ -17,6 +39,3 @@ favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-comm
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
