--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line_length = 120
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "0.0.54-alpha.7"
+version = "V0.0.54-alpha.9"
 
 
 description = "Favie Data Schema"
@@ -34,7 +34,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1"}
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="V0.0.2-alpha.0"}
 
 [build-system]
 requires = ["poetry-core"]
