--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,29 @@
+[tool.black]
+line-length = 120
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 120
+
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "0.0.53"
+version = "V0.0.58"
 
 
 description = "Favie Data Schema"
@@ -12,13 +34,8 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-lxml = "5.2.1"
-favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="0.0.1"}
-
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="V0.0.2-alpha.1"}
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
