--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line_length = 120
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "V0.0.59-alpha.2"
+version = "v0.0.59-alpha.3"
 
 
 description = "Favie Data Schema"
