--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line_length = 120
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "v0.0.63-alpha.5"
+version = "v0.0.62"
 
 
 description = "Favie Data Schema"
