--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 *__pycache__*
 dist/*
+
+# 忽略所有 .DS_Store 文件
+.DS_Store
+favie_data_schema/.DS_Store
+favie_data_schema/favie/.DS_Store
+favie_data_schema/favie/adapter/.DS_Store
+favie_data_schema/favie/adapter/product/.DS_Store
+
+# 忽略 VSCode 的临时文件
+
+
+.idea/*
