--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line_length = 120
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "v0.0.73"
+version = "v0.0.74-alpha.0"
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
 readme = "README.md"
