--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line_length = 120
 [tool.poetry]
 name = "favie-data-schema"
 
-version = "v0.0.78-alpha.13"
+version = "v0.0.78"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
@@ -33,7 +33,7 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
-favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.8-alpha.9"}
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.8"}
 
 [build-system]
 requires = ["poetry-core"]
