--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,37 +1,34 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-        language_version: python3
-  - repo: https://github.com/pycqa/autoflake
-    rev: v2.3.1
-    hooks:
-      - id: autoflake
-        args:
-          [
-            --in-place,
-            --remove-all-unused-imports,
-            --remove-duplicate-keys,
-            --remove-unused-variables,
-            --ignore-init-module-imports
-          ]
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
-      - id: isort
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      - id: requirements-txt-fixer
-  - repo: local
-    hooks:
-      - id: check-user
-        name: Check User
-        entry: sh scripts/hooks/check_user.sh
-        language: system
-      - id: forbid-keywords
-        name: Forbid Keywords
-        entry: sh scripts/hooks/forbid_keywords.sh
-        language: system
-        types: [file]
+- repo: https://github.com/psf/black
+  rev: 23.11.0
+  hooks:
+  - id: black
+    language_version: python3
+- repo: https://github.com/pycqa/autoflake
+  rev: v2.3.1
+  hooks:
+  - id: autoflake
+    args: [ --in-place, --remove-all-unused-imports, --remove-duplicate-keys, --remove-unused-variables, --ignore-init-module-imports ]
+- repo: https://github.com/pre-commit/mirrors-isort
+  rev: v5.10.1
+  hooks:
+  - id: isort
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0
+  hooks:
+  - id: requirements-txt-fixer
+- repo: local
+  hooks:
+  - id: check-user
+    name: Check User
+    entry: bash scripts/hooks/check_user.sh
+    language: system
+  - id: forbid-keywords
+    name: Forbid Keywords
+    entry: bash scripts/hooks/forbid_keywords.sh
+    language: system
+    types: [ file ]
+  - id: poetry-install
+    name: Poetry Install
+    entry: bash scripts/hooks/poetry_install.sh
+    language: system
