--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ authors = ["allenz-srp <allenz@srp.one>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10,<3.13"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
 favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.9"}
