--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ line_length = 120
 
 [tool.poetry]
 name = "favie-data-schema"
-version = "v0.0.91"
+version = "v0.0.92-alpha.0"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
@@ -32,6 +32,7 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
+simhash = "2.1.2"
 favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.10"}
 
 [build-system]
