--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ python = ">=3.10,<3.13"
 pydantic = "2.6.4"
 pydantic-settings = "2.2.1"
 simhash = "2.1.2"
-favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.10"}
+favie-data-common = {git = "https://github.com/SerendipityOneInc/favie-data-common.git", rev="v0.0.11-alpha.0"}
 
 [build-system]
 requires = ["poetry-core"]
