--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ line_length = 120
 
 [tool.poetry]
 name = "favie-data-schema"
-version = "v0.0.112"
+version = "v0.0.113-alpha.0"
 
 description = "Favie Data Schema"
 authors = ["allenz-srp <allenz@srp.one>"]
